# triage-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONVERSATION.md  HANDOFF.md  MEMORY.md  README.md  goals-prompt.md  implementation-notes.md  install.ps1  install.sh  justfile  pyproject.toml  triage-cli-scratchpad.md
.claude/: settings.local.json
.codex/: subagents.yaml
archive/: README.md
data/: cnc-map-gaps.md  views.json
docs/: 05.11.26-spec-revision.md  CHEATSHEET.md  ROADMAP.md  lessons-from-go-spike.md  product-direction-review.md
scripts/: build_cnc_map.py  certify_readonly_my_queue.py  setup.py
tests/: test_attachment_download.py  test_certify_readonly_my_queue.py  test_cli.py  test_clipboard.py  test_context.py  test_customer_history.py  test_doctor.py  test_evidence.py  test_extract.py  test_hydrate.py  test_inbox_app.py  test_inbox_state.py  test_interactive.py  test_investigate_one.py  test_investigation.py  test_llm.py  test_memory.py  test_models.py  test_pipeline.py  test_providers.py  test_redact.py  test_render.py  test_reporter.py  test_setup_script.py  test_timeline.py  test_tui_reporter.py  test_watcher.py  test_watcher_callbacks.py  test_widgets.py  test_workspace.py  test_zendesk.py
triage-cli-go/: .gitignore  GO_CONVERSATION_CONTEXT.md  GO_SPIKE_START_PROMPT.md  HANDOFF_GO_SPIKE.md  (+2 more)
triage-cli-rs/: Cargo.toml  REGRESSIONS.md  apex-cnc-inventory.md
triage-cli-rs/data/: cnc-map-gaps.md  cnc-map.json
triage-cli-rs/docs/decisions/: 2026-05-17-codex-session-capture.md
triage-cli-rs/fixtures/audio-drop/: datadog-logs.json  memory-hits.json  ticket.json
triage-cli-rs/fixtures/missing-evidence/: ticket.json
triage-cli-rs/fixtures/no-site-map/: ticket.json
triage-cli-rs/fixtures/vendor-fork/: datadog-logs.json  memory-hits.json  ticket.json
triage-cli-rs/playbook/: fork-rubric.md
triage-cli-rs/src/: build_map.rs  chat.rs  cli.rs  datadog.rs  extract.rs  fixture.rs  interactive.rs  investigation.rs  lib.rs  llm.rs  main.rs  memory.rs  models.rs  paths.rs  pipeline.rs  playbook.rs  redact.rs  setup.rs  ticket_folder.rs  watcher.rs  zendesk.rs
triage-cli-rs/src/llm/: bundle_prompt.rs
triage-cli-rs/src/models/: chat.rs
triage-cli-rs/src/pipeline/: base_evidence.rs  ctx.rs  followup.rs  investigate.rs  mod.rs  options.rs  owner.rs  reporter.rs  revise.rs  site.rs
triage-cli-rs/src/pipeline/phases/: bundle.rs  enrichment.rs  history.rs  llm.rs  memory.rs  mod.rs  save.rs  timeline.rs
triage-cli-rs/src/providers/: claude.rs  codex.rs  codex_app_server.rs  codex_schema.rs  mod.rs  openai.rs  unleash.rs
triage-cli-rs/src/tui/: chat.rs  effects.rs  inbox.rs  mod.rs
triage-cli-rs/src/tui/inbox/: app.rs  chat.rs  mod.rs  poll.rs  render.rs  state.rs
triage-cli-rs/tests/: README.md  TESTING.md  codex_app_server_contract.rs  codex_contract.rs  codex_structured_parity.rs  pipeline_integration.rs
triage-cli-rs/tests/integration/: common.rs  mod.rs  runbook_01_setup.rs  runbook_02_triage.rs  runbook_03_sitemap.rs  runbook_05_llm.rs  runbook_06_watch.rs  runbook_08_certify.rs  runbook_cli_smoke.rs  zendesk_mock.rs
triage-cli-rs/tests/sandbox/: mod.rs  runbook_02_live_triage.rs  runbook_05_live_provider.rs
(+135 files in other folders)
