[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-cli"
version = "0.1.0"
description = "CLI to triage Zendesk tickets for the Carbyne APEX NG911/E911 platform using Unleash and Datadog logs."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "datadog-api-client>=2.30",
    "python-dotenv>=1.0",
    "unicode-animations>=0.2",
    "rich>=13",
    "textual>=0.80",
]

[project.optional-dependencies]
claude = [
    "claude-agent-sdk>=0.1",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
triage-cli = "triage_cli.cli:app"

[tool.setuptools.packages.find]
include = ["triage_cli*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
